[gd_scene load_steps=3 format=3 uid="uid://xa37wa74jdp3"]

[ext_resource type="Script" path="res://savepoint.gd" id="1_8gm61"]
[ext_resource type="Texture2D" uid="uid://cqifdj5a8gcuh" path="res://tiles/t00_001.png" id="2_b4mtf"]

[node name="savepoint" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gm61")

[node name="savepoint_object" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_b4mtf")

[node name="savepoint_initial" type="CheckButton" parent="."]
layout_mode = 0
offset_right = 44.0
offset_bottom = 24.0
text = "Is Initial"

[connection signal="button_down" from="savepoint_object" to="." method="_on_savepoint_object_button_down"]
[connection signal="toggled" from="savepoint_initial" to="." method="_on_savepoint_initial_toggled"]
